[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ktec_smt_schedule"
version = "0.1.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cookiecutter>=2.6.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pytest>=8.4.2",
    "pyxlsb>=1.0.10",
    "setuptools>=80.9.0",
    "styleframe>=4.2",
    "wheel>=0.45.1",
    "xlrd>=2.0.2",
]

[tool.setuptools]
packages = ["ktec_smt_schedule"]
package-dir = {"ktec_smt_schedule" = "src"}
