[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ktec_smt_schedule"
version = "0.1.2"
description = "SMT Schedule processing library"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8,<3.12"
authors = [
    { name = "kentaroyoshida", email = "your-email@example.com" },
]
keywords = ["smt", "schedule", "excel", "manufacturing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "openpyxl>=3.0.0",
    "pandas>=1.5.0",
    "xlrd>=2.0.1",
    "xlwt>=1.3.0",
    "xlsxwriter>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "isort>=5.0.0",
    "flake8>=5.0.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/kent2980/get_ktec_smt_schedule"
Repository = "https://github.com/kent2980/get_ktec_smt_schedule.git"
Issues = "https://github.com/kent2980/get_ktec_smt_schedule/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ktec_smt_schedule"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
]